tests/NormalTests/paczka1/fuzzy1/82320099.err
Error in line 3: ZPGmljIV S916 5,5
Error in line 4: Bm4rLcbhU S391 1,7
Error in line 8: Bm4rLcbhU S916 15,9
Error in line 15: IGRhjU S391 239,08
Error in line 12: IGRhjU S391 60,7
Error in line 14: S333 S333 27,0
Error in line 13: Bm4rLcbhU S175 30,7
Error in line 24: n56Lqg S333 82,9
Error in line 22: cOj1q S916 0,9
Error in line 31: n56Lqg S916 46,3
